# home_security

src/cpp/sniffer/: CMakeLists.txt  Communicator.cpp  Communicator.h  ConnectionMap.cpp  ConnectionMap.h  LocalMonitor.cpp  LocalMonitor.h  MachinesConnection.cpp  MachinesConnection.h  main.cpp
src/cpp/sniffer/abstract_socket/: CrossPlatformSocket.cpp  CrossPlatformSocket.h
src/python/home_security/server/: __init__.py  runner.py
